typos && freebsd issue(prob not an issue since BSD players are rare)